<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Inmobiliaria</string>
    <string name="hello_world">Hello world!</string>
    <string name="nuevo">Nuevo inmueble</string>
    <string name="modificar">Modificar</string>
    <string name="borrar">Borrar</string>
    <string name="inmo">Fragamento inmo</string>
    <string name="foto">Fragamento foto</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_insertar">Insertar</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_modificar">Modificar</string>
    <string name="title_activity_secundaria">Secundaria</string>
    <string name="localidad">Localidad</string>
    <string name="direccion">Direccion</string>
    <string name="precio">Precio</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>

    <string-array name="tipos">
        <item>Casa</item>
        <item>Piso</item>
        <item>Local</item>
        <item>Cochera</item>
    </string-array>

</resources>
