<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/localidadin"
        android:hint="@string/localidad" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/direccionin"
        android:hint="@string/direccion" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tipoin"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/precioin"
        android:hint="@string/precio"
        android:inputType="number" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="abrirCamara"
            android:id="@+id/imageButton"
            android:src="@android:drawable/ic_menu_camera" />

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:id="@+id/scrollView"
            android:focusableInTouchMode="false"
            android:focusable="false"
            android:longClickable="false"
            android:measureAllChildren="false"
            android:nestedScrollingEnabled="false">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/tvimagen"
                android:layout_gravity="center_horizontal"
                android:editable="false"
                android:enabled="false"
                android:autoText="false"
                android:clickable="false"
                android:longClickable="false" />
        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aceptar"
            android:id="@+id/aceptar"
            android:onClick="insertar"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancelar"
            android:id="@+id/cancelar"
            android:onClick="cancelar"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>
